--- a/.github/workflows/build-arm.yml
+++ b/.github/workflows/build-arm.yml
@@ -18,4 +18,8 @@ jobs:
         uses: baptiste0928/cargo-install@v3
         with:
           crate: cargo-lambda
+      - uses: Swatinem/rust-cache@v2
       - run: cargo lambda build
+      - uses: actions/upload-artifact@v4
+        with:
+          path: ./target/lambda
