--- a/.github/workflows/build-arm.yml
+++ b/.github/workflows/build-arm.yml
@@ -16,10 +16,8 @@ jobs:
         run: npm install -g @ziglang/cli
       - name: Install rust stable
         uses: dtolnay/rust-toolchain@stable
-      - name: Install cargo-lambda from crates.io
-        uses: baptiste0928/cargo-install@v3
-        with:
-          crate: cargo-lambda
+      - name: Install cargo-lambda from pip
+        run: pip install cargo-lambda
       - uses: Swatinem/rust-cache@v2
       - run: cargo lambda build
       - uses: actions/upload-artifact@v4
