--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,7 +4,10 @@ version = "0.1.0"
 edition = "2024"
 
 [dependencies]
+lambda_runtime = "0.14.4"
 pyo3 = "0.26.0"
+serde_json = "1.0.145"
+tokio = "1.47.1"
 zip = "5.1.1"
 
 
