--- a/.github/workflows/build-arm.yml
+++ b/.github/workflows/build-arm.yml
@@ -2,7 +2,7 @@ name: Build-arm
 
 env:
   CARGO_TERM_COLOR: always
-  PYO3_PRINT_CONFIG: "1"
+  PYO3_CONFIG_FILE: ./pyo3.config
 
 on:
   workflow_dispatch:
