--- a/pyo3.config
+++ b/pyo3.config
@@ -1,8 +1,8 @@
 implementation=CPython
-version=3.12
-shared=false
+version=3.9
+shared=true
 abi3=false
-lib_name=python3.12
+lib_name=python3.9
 lib_dir=/usr/lib/aarch64-linux-gnu
 executable=/usr/bin/python
 pointer_width=64
