--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,11 +5,10 @@ edition = "2024"
 
 [dependencies]
 lambda_runtime = "0.14.4"
-pyo3 = "0.26.0"
+pyo3 = { version = "0.26.0", features = ["abi3"] }
 serde_json = "1.0.145"
 tokio = "1.47.1"
 zip = "5.1.1"
-
 
 [build-dependencies]
 walkdir = "2.5.0"
