--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,8 +4,8 @@ version = "0.1.0"
 edition = "2024"
 
 [dependencies]
+base64 = "0.22.1"
 lambda_runtime = "0.14.4"
-pyo3 = { version = "0.26.0", features = ["abi3"] }
 serde_json = "1.0.145"
 tokio = "1.47.1"
 zip = "5.1.1"
